upgrade jvm2dts